      ExitBootServices.  Otherwise, linux will fall through to previous
      code, call ExitBootServices itself, and boot the kernel normally.
    - Generate configuration for signed UEFI kernels if available.
    - On Ubuntu amd64, add a raw-uefi custom upload tarball for signing.
    - Install signed images if available and UEFI Secure Boot is enabled.

 -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jan 2013 11:08:07 +0000

grub2 (2.00-12) experimental; urgency=low

  * Silence output from running-in-container.
  * Also skip update-grub when running in a container (LP: #1060404).

 -- Colin Watson <cjwatson@debian.org>  Thu, 24 Jan 2013 23:21:48 +0000

grub2 (2.00-11) experimental; urgency=low

  [ Adam Conrad ]
  * debian/{postinst,config}.in: Don't fail if /etc/default/grub.d
    configuration snippets exist, but /etc/default/grub does not.

  [ Colin Watson ]
  * Merge wheezy branch up to 1.99-27, fixing overzealous removal of
    load_video call when GRUB_GFXPAYLOAD_LINUX is empty (closes: #661789).
  * Merge from Ubuntu:
    - If the postinst is running in a container, skip grub-install and all
      its associated questions (LP: #1060404).
    - Fix backslash-escaping in merge_debconf_into_conf (LP: #448413).  Note
      that this differs slightly from the fix in Ubuntu, which corrected
      behaviour when amending an existing configuration item but
      accidentally over-escaped when adding a new one.
    - Replace "single" with "recovery" when friendly-recovery is installed
      (LP: #575469).
    - Adjust versions of grub-doc and grub-legacy-doc conflicts to tolerate
      Ubuntu's backport of the grub-doc split (LP: #493968).

 -- Colin Watson <cjwatson@debian.org>  Mon, 21 Jan 2013 10:49:00 +0000

grub2 (2.00-10) experimental; urgency=low

  * Support parallel builds.
  * Remove /boot/grub/unicode.pf2 on purge of grub-efi-{amd64,i386} (closes:
    #697183).
  * Build with GCC 4.7.
  * Merge from Ubuntu: