@@ -7,7 +7,7 @@ _Description: Linux command line:
 
 Template: grub2/linux_cmdline_default
 Type: string
-Default: quiet
+Default: @DEFAULT_CMDLINE@
 _Description: Linux default command line:
  The following string will be used as Linux parameters for the default menu
  entry but not for the recovery mode.
@@ -23,7 +23,7 @@ _Description: kFreeBSD command line:
 # still unused
 Template: grub2/kfreebsd_cmdline_default
 Type: string
-Default: quiet
+Default: @DEFAULT_CMDLINE@
 _Description: kFreeBSD default command line:
  The following string will be used as kFreeBSD parameters for the default menu
  entry but not for the recovery mode.
